5 files modified, 1 added, 1 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<mat-accordion>
+<!-- 
+  DEMO 
+-->
+<app-base-expansion></app-base-expansion>
+
+<mat-accordion class="base-accordion">
   <mat-expansion-panel hideToggle>
     <mat-expansion-panel-header>
       <mat-panel-title>
