--- a/src/app/components/base-expansion/base-expansion.component.html
+++ b/src/app/components/base-expansion/base-expansion.component.html
@@ -1,13 +1,24 @@
-
 <mat-accordion class="base-accordion">
-
   <mat-expansion-panel hideToggle>
     <mat-expansion-panel-header>
       <mat-panel-title>
-        This is the expansion title 2
+        <div class="advance-multi-location-title" fxLayout="row">
+          <div class="title-size">Size</div>
+          <div class="title-qty">Quantity</div>
+          <div class="title-location">Location</div>
+        </div>
       </mat-panel-title>
+
       <mat-panel-description>
-        This is a summary of the content
+        <div fxLayout="row">
+          <div>Address</div>
+
+          <div fxLayout="row">
+            <div>Edit</div>
+            <div>Duplicate</div>
+            <div>Delete</div>
+          </div>
+        </div>
       </mat-panel-description>
     </mat-expansion-panel-header>
     <p>This is the primary content of the panel.</p>
@@ -26,5 +37,4 @@
     </mat-expansion-panel-header>
     <p>I'm visible because I am open</p>
   </mat-expansion-panel>
-
 </mat-accordion>
