--- a/src/app/components/base-expansion/base-expansion.component.scss
+++ b/src/app/components/base-expansion/base-expansion.component.scss
@@ -58,3 +58,14 @@ Multiple Shipping Locations
     width: 115px;
   }
 }
+
+/*
+ADVANCE MULTI LOCATION DESCRIPTION
+Multiple Shipping Locations
+*/
+
+.advance-multi-location-description {
+  // ADDRESS.
+
+  // ACTIONS.
+}
