--- a/src/app/components/base-expansion/base-expansion.component.html
+++ b/src/app/components/base-expansion/base-expansion.component.html
@@ -20,7 +20,10 @@
 
       <mat-panel-description>
         <div class="advance-multi-location-description" fxLayout="row">
-          <div>Address</div>
+        <div class="title-address" fxLayout="column">
+          <span>Address</span>
+          <span>Address</span>
+        </div>
 
           <div fxLayout="row">
             <div>Edit</div>
