--- a/src/app/components/base-expansion/base-expansion.component.html
+++ b/src/app/components/base-expansion/base-expansion.component.html
@@ -29,13 +29,13 @@
         <div class="advance-multi-location-description" fxLayout="row">
 
           <!-- ADDRESS (TITLE) -->
-          <div class="title-address" fxLayout="column">
+          <div class="title-address" fxLayout="column" fxFlex="70%">
             <span>Address</span>
             <span>5445 Legacy Dr Suite #420, Plano, TX 75024</span>
           </div>
 
           <!-- ACTIONS (TITLE) -->
-          <div fxLayout="row">
+          <div fxLayout="row" fxFlex="30%">
             <button mat-button>Edit</button>
             <button mat-button>Duplicate</button>
             <button mat-button>Delete</button>
