--- a/src/app/components/base-expansion/base-expansion.component.html
+++ b/src/app/components/base-expansion/base-expansion.component.html
@@ -35,7 +35,7 @@
           </div>
 
           <!-- ACTIONS (TITLE) -->
-          <div fxLayout="row" fxFlex="30%">
+          <div class="title-actions" fxLayout="row" fxFlex="30%" fxLayoutAlign="start stretch">
             <button mat-button>Edit</button>
             <button mat-button>Duplicate</button>
             <button mat-button>Delete</button>
