--- a/src/app/components/base-expansion/base-expansion.component.scss
+++ b/src/app/components/base-expansion/base-expansion.component.scss
@@ -40,7 +40,7 @@ Multiple Shipping Locations
 @mixin default-multi-location-title {
   font-size: 12px;
   font-weight: 100;
-  padding-top: 10px;
+  padding-top: 5px;
   text-align: center;
 }
 
@@ -83,5 +83,15 @@ Multiple Shipping Locations
   .title-actions {
     @include default-multi-location-title;
     place-content: flex-end !important;
+
+    // BUTTONS.
+    ::ng-deep .mat-button {
+      .mat-button-wrapper {
+        color: #02B6BE;
+        font-size: 14px;
+        font-weight: 100;
+        text-decoration: underline;
+      }
+    }
   }
 }
