--- a/src/app/components/base-expansion/base-expansion.component.html
+++ b/src/app/components/base-expansion/base-expansion.component.html
@@ -44,8 +44,17 @@
         </div>
       </mat-panel-description>
     </mat-expansion-panel-header>
-    <p>This is the primary content of the panel.</p>
+
+    <!-- STATIC CONTENT -->
+    <div></div>
+    <!-- [end] -->
+
   </mat-expansion-panel>
+
+
+
+
+  <!-- -->
   <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
     <mat-expansion-panel-header>
       <mat-panel-title>
@@ -57,4 +66,9 @@
     </mat-expansion-panel-header>
     <p>I'm visible because I am open</p>
   </mat-expansion-panel>
+
+
+
+
+
 </mat-accordion>
