--- a/src/app/components/base-expansion/base-expansion.component.html
+++ b/src/app/components/base-expansion/base-expansion.component.html
@@ -46,7 +46,8 @@
     </mat-expansion-panel-header>
 
     <!-- STATIC CONTENT -->
-    <div></div>
+    <div class="panel-static-data" fxLayout="row">
+    </div>
     <!-- [end] -->
 
   </mat-expansion-panel>
