--- a/src/app/components/base-expansion/base-expansion.component.html
+++ b/src/app/components/base-expansion/base-expansion.component.html
@@ -47,6 +47,48 @@
 
     <!-- STATIC CONTENT -->
     <div class="panel-static-data" fxLayout="row">
+      <!-- ??? -->
+      <div fxLayout="column">
+        <span>Title</span>
+        <span>Value</span>
+      </div>
+
+      <!-- ??? -->
+      <div fxLayout="column">
+        <span>Title</span>
+        <span>Value</span>
+      </div>
+
+      <!-- ??? -->
+      <div fxLayout="column">
+        <span>Title</span>
+        <span>Value</span>
+      </div>
+
+      <!-- ??? -->
+      <div fxLayout="column">
+        <span>Title</span>
+        <span>Value</span>
+      </div>
+
+      <!-- ??? -->
+      <div fxLayout="column">
+        <span>Title</span>
+        <span>Value</span>
+      </div>
+
+      <!-- ??? -->
+      <div fxLayout="column">
+        <span>Title</span>
+        <span>Value</span>
+      </div>
+
+      <!-- ??? -->
+      <div fxLayout="column">
+        <span>Title</span>
+        <span>Value</span>
+      </div>
+
     </div>
     <!-- [end] -->
 
