--- a/src/app/components/base-expansion/base-expansion.component.scss
+++ b/src/app/components/base-expansion/base-expansion.component.scss
@@ -31,6 +31,11 @@ BASE EXPANSION
       }
     }
 
+    // EXPANSION CONTENT PANEL.
+    .mat-expansion-panel-content {
+      background-color: rgb(83, 90, 90);
+    }
+
     // PANEL DATA.
     .panel-static-data {
       background-color: aqua;
