--- a/src/app/components/base-expansion/base-expansion.component.html
+++ b/src/app/components/base-expansion/base-expansion.component.html
@@ -48,43 +48,43 @@
     <!-- STATIC CONTENT -->
     <div class="panel-static-data" fxLayout="row">
       <!-- ??? -->
-      <div fxLayout="column">
+      <div class="static-data" fxLayout="column" fxFlex="14%">
         <span>Title</span>
         <span>Value</span>
       </div>
 
       <!-- ??? -->
-      <div fxLayout="column">
+      <div class="static-data" fxLayout="column" fxFlex="14%">
         <span>Title</span>
         <span>Value</span>
       </div>
 
       <!-- ??? -->
-      <div fxLayout="column">
+      <div class="static-data" fxLayout="column" fxFlex="14%">
         <span>Title</span>
         <span>Value</span>
       </div>
 
       <!-- ??? -->
-      <div fxLayout="column">
+      <div class="static-data" fxLayout="column" fxFlex="14%">
         <span>Title</span>
         <span>Value</span>
       </div>
 
       <!-- ??? -->
-      <div fxLayout="column">
+      <div class="static-data" fxLayout="column" fxFlex="14%">
         <span>Title</span>
         <span>Value</span>
       </div>
 
       <!-- ??? -->
-      <div fxLayout="column">
+      <div class="static-data" fxLayout="column" fxFlex="14%">
         <span>Title</span>
         <span>Value</span>
       </div>
 
       <!-- ??? -->
-      <div fxLayout="column">
+      <div class="static-data" fxLayout="column" fxFlex="14%">
         <span>Title</span>
         <span>Value</span>
       </div>
