--- a/src/app/components/base-expansion/base-expansion.component.html
+++ b/src/app/components/base-expansion/base-expansion.component.html
@@ -47,37 +47,37 @@
 
     <!-- STATIC CONTENT -->
     <div class="panel-static-data" fxLayout="row">
-      <!-- ??? -->
+      <!-- SHIP DATE -->
+      <div class="static-data" fxLayout="column" fxFlex="14%">
+        <span>Ship Date</span>
+        <span>6/15/22</span>
+      </div>
+
+      <!-- IN HAND DATE -->
+      <div class="static-data" fxLayout="column" fxFlex="14%">
+        <span>In Hand Date</span>
+        <span>6/25/22</span>
+      </div>
+
+      <!-- SHIPPING METHOD -->
       <div class="static-data" fxLayout="column" fxFlex="14%">
         <span>Title</span>
         <span>Value</span>
       </div>
 
-      <!-- ??? -->
+      <!-- TRACKING NO. -->
       <div class="static-data" fxLayout="column" fxFlex="14%">
         <span>Title</span>
         <span>Value</span>
       </div>
 
-      <!-- ??? -->
+      <!-- ACCOUNT -->
       <div class="static-data" fxLayout="column" fxFlex="14%">
         <span>Title</span>
         <span>Value</span>
       </div>
 
-      <!-- ??? -->
-      <div class="static-data" fxLayout="column" fxFlex="14%">
-        <span>Title</span>
-        <span>Value</span>
-      </div>
-
-      <!-- ??? -->
-      <div class="static-data" fxLayout="column" fxFlex="14%">
-        <span>Title</span>
-        <span>Value</span>
-      </div>
-
-      <!-- ??? -->
+      <!-- INSTRUCTIONS -->
       <div class="static-data" fxLayout="column" fxFlex="14%">
         <span>Title</span>
         <span>Value</span>
