--- a/src/app/components/base-expansion/base-expansion.component.html
+++ b/src/app/components/base-expansion/base-expansion.component.html
@@ -61,31 +61,31 @@
 
       <!-- SHIPPING METHOD -->
       <div class="static-data" fxLayout="column" fxFlex="14%">
-        <span>Title</span>
+        <span>Shipping Method</span>
         <span>Value</span>
       </div>
 
       <!-- TRACKING NO. -->
       <div class="static-data" fxLayout="column" fxFlex="14%">
-        <span>Title</span>
+        <span>Tracking NO.</span>
         <span>Value</span>
       </div>
 
       <!-- ACCOUNT -->
       <div class="static-data" fxLayout="column" fxFlex="14%">
-        <span>Title</span>
+        <span>Account</span>
+        <span>Value</span>
+      </div>
+
+      <!-- CONTACT -->
+      <div class="static-data" fxLayout="column" fxFlex="14%">
+        <span>Contact</span>
         <span>Value</span>
       </div>
 
       <!-- INSTRUCTIONS -->
       <div class="static-data" fxLayout="column" fxFlex="14%">
-        <span>Title</span>
-        <span>Value</span>
-      </div>
-
-      <!-- ??? -->
-      <div class="static-data" fxLayout="column" fxFlex="14%">
-        <span>Title</span>
+        <span>Instructions</span>
         <span>Value</span>
       </div>
 
