--- a/src/app/components/base-expansion/base-expansion.component.scss
+++ b/src/app/components/base-expansion/base-expansion.component.scss
@@ -122,5 +122,6 @@ Multiple Shipping Locations
     @include default-multi-location-title;
     padding-top: 10px;
     padding-bottom: 10px;
+    border-right: 1px solid #ddd;
   }
 }
