--- a/src/app/components/base-expansion/base-expansion.component.scss
+++ b/src/app/components/base-expansion/base-expansion.component.scss
@@ -29,6 +29,7 @@ BASE EXPANSION
 
     // HEADER.
     .mat-expansion-panel-header {
+      background-color: #f3f3f3 !important;
       padding: 0;
 
       .mat-content {
