2 files modified, 2 added

--- a/src/app/components/base-expansion/base-expansion.component.html
+++ b/src/app/components/base-expansion/base-expansion.component.html
@@ -38,9 +38,9 @@
 
           <!-- ACTIONS (TITLE) -->
           <div class="title-actions" fxLayout="row" fxFlex="30%" fxLayoutAlign="start stretch">
-            <button mat-button>Edit</button>
-            <button mat-button>Duplicate</button>
-            <button mat-button>Delete</button>
+            <button mat-button (click)="editProductShipping()">Edit</button>
+            <button mat-button (click)="duplicateProductShipping()">Duplicate</button>
+            <button mat-button (click)="deleteProductShipping()">Delete</button>
           </div>
 
         </div>
@@ -97,7 +97,7 @@
   </mat-expansion-panel>
 
 
-  <!-- #2 --> 
+  <!-- #2 -->
   <mat-expansion-panel hideToggle>
     <mat-expansion-panel-header>
       <mat-panel-title>
@@ -196,100 +196,100 @@
 
   <!-- #3 -->
   <mat-expansion-panel hideToggle (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-  <mat-expansion-panel-header>
-    <mat-panel-title>
-      <div class="advance-multi-location-title" fxLayout="row">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        <div class="advance-multi-location-title" fxLayout="row">
 
-        <!-- SIZE (TITLE) -->
-        <div class="title-size" fxLayout="column">
-          <span>Size</span>
-          <span>M</span>
+          <!-- SIZE (TITLE) -->
+          <div class="title-size" fxLayout="column">
+            <span>Size</span>
+            <span>M</span>
+          </div>
+
+          <!-- QTY (TITLE) -->
+          <div class="title-qty" fxLayout="column">
+            <span>Quantity</span>
+            <span>1,000,000</span>
+          </div>
+
+          <!-- LOCATION (TITLE) -->
+          <div class="title-location" fxLayout="column">
+            <span>Location</span>
+            <span>Plano, TX</span>
+          </div>
+
         </div>
+      </mat-panel-title>
 
-        <!-- QTY (TITLE) -->
-        <div class="title-qty" fxLayout="column">
-          <span>Quantity</span>
-          <span>1,000,000</span>
+      <mat-panel-description>
+        <div class="advance-multi-location-description" fxLayout="row">
+
+          <!-- ADDRESS (TITLE) -->
+          <div class="title-address" fxLayout="column" fxFlex="70%">
+            <span>Address</span>
+            <span>5445 Legacy Dr Suite #420, Plano, TX 75024</span>
+          </div>
+
+          <!-- ACTIONS (TITLE) -->
+          <div class="title-actions" fxLayout="row" fxFlex="30%" fxLayoutAlign="start stretch">
+            <button mat-button>Edit</button>
+            <button mat-button>Duplicate</button>
+            <button mat-button>Delete</button>
+          </div>
+
         </div>
+      </mat-panel-description>
+    </mat-expansion-panel-header>
 
-        <!-- LOCATION (TITLE) -->
-        <div class="title-location" fxLayout="column">
-          <span>Location</span>
-          <span>Plano, TX</span>
-        </div>
-
+    <!-- STATIC CONTENT -->
+    <div class="panel-static-data" fxLayout="row">
+      <!-- SHIP DATE -->
+      <div class="static-data" fxLayout="column" fxFlex="14%">
+        <span>Ship Date</span>
+        <span>6/15/22</span>
       </div>
-    </mat-panel-title>
 
-    <mat-panel-description>
-      <div class="advance-multi-location-description" fxLayout="row">
-
-        <!-- ADDRESS (TITLE) -->
-        <div class="title-address" fxLayout="column" fxFlex="70%">
-          <span>Address</span>
-          <span>5445 Legacy Dr Suite #420, Plano, TX 75024</span>
-        </div>
-
-        <!-- ACTIONS (TITLE) -->
-        <div class="title-actions" fxLayout="row" fxFlex="30%" fxLayoutAlign="start stretch">
-          <button mat-button>Edit</button>
-          <button mat-button>Duplicate</button>
-          <button mat-button>Delete</button>
-        </div>
-
+      <!-- IN HAND DATE -->
+      <div class="static-data" fxLayout="column" fxFlex="14%">
+        <span>In Hand Date</span>
+        <span>6/25/22</span>
       </div>
-    </mat-panel-description>
-  </mat-expansion-panel-header>
 
-  <!-- STATIC CONTENT -->
-  <div class="panel-static-data" fxLayout="row">
-    <!-- SHIP DATE -->
-    <div class="static-data" fxLayout="column" fxFlex="14%">
-      <span>Ship Date</span>
-      <span>6/15/22</span>
+      <!-- SHIPPING METHOD -->
+      <div class="static-data" fxLayout="column" fxFlex="14%">
+        <span>Shipping Method</span>
+        <span>Value</span>
+      </div>
+
+      <!-- TRACKING NO. -->
+      <div class="static-data" fxLayout="column" fxFlex="14%">
+        <span>Tracking NO.</span>
+        <span>Value</span>
+      </div>
+
+      <!-- ACCOUNT -->
+      <div class="static-data" fxLayout="column" fxFlex="14%">
+        <span>Account</span>
+        <span>Value</span>
+      </div>
+
+      <!-- CONTACT -->
+      <div class="static-data" fxLayout="column" fxFlex="14%">
+        <span>Contact</span>
+        <span>Value</span>
+      </div>
+
+      <!-- INSTRUCTIONS -->
+      <div class="static-data" fxLayout="column" fxFlex="14%">
+        <span>Instructions</span>
+        <span>Value</span>
+      </div>
+
     </div>
+    <!-- [end] -->
 
-    <!-- IN HAND DATE -->
-    <div class="static-data" fxLayout="column" fxFlex="14%">
-      <span>In Hand Date</span>
-      <span>6/25/22</span>
-    </div>
-
-    <!-- SHIPPING METHOD -->
-    <div class="static-data" fxLayout="column" fxFlex="14%">
-      <span>Shipping Method</span>
-      <span>Value</span>
-    </div>
-
-    <!-- TRACKING NO. -->
-    <div class="static-data" fxLayout="column" fxFlex="14%">
-      <span>Tracking NO.</span>
-      <span>Value</span>
-    </div>
-
-    <!-- ACCOUNT -->
-    <div class="static-data" fxLayout="column" fxFlex="14%">
-      <span>Account</span>
-      <span>Value</span>
-    </div>
-
-    <!-- CONTACT -->
-    <div class="static-data" fxLayout="column" fxFlex="14%">
-      <span>Contact</span>
-      <span>Value</span>
-    </div>
-
-    <!-- INSTRUCTIONS -->
-    <div class="static-data" fxLayout="column" fxFlex="14%">
-      <span>Instructions</span>
-      <span>Value</span>
-    </div>
-
-  </div>
-  <!-- [end] -->
-
-</mat-expansion-panel>
+  </mat-expansion-panel>
 
 
 
-  </mat-accordion>
+</mat-accordion>
